fix horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,7 @@ footer {
 }
 .bg-footer {
     background-color: rgb(0,67,156);
-    padding: 5em 1em 5em 3em;
+    padding: 5em 0 5em 3em;
 }
 
 footer img {
